# Helix

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  ELECTRON_SETUP.md  README.md  RELEASE_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  roles.sql  schema.sql  start-desktop.ps1  start-desktop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
backend/: check_github_accounts.py  check_social_apps.py  dockerfile  requirements.txt  temp_repo_file_7.py  worker.Dockerfile
backend/config/: api_router.py  celery.py  settings.py  urls.py
backend/coverage_uploads/: 6_bae8d874-eafe-436c-bb57-5b79bc4f5204.xml
backend/repositories/: admin.py  agno_tools.py  ai_services.py  apps.py  decorators.py  diagram_utils.py  models.py  operations.py  permissions.py  serializers.py  signals.py  tasks.py  utils.py  views.py
backend/repositories/migrations/: 0001_initial.py  0002_add_local_repository_support.py  0002_codedependency.py  (+37 more)
backend/test_local_repo/: main.py  utils.py
backend/users/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  social_views.py  tasks.py  urls.py  views.py
engine/helix-engine/: Cargo.toml  output.json
engine/helix-engine/src/: main.rs
engine/helix-engine/test/: test.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts  utils.ts
scripts/: resolve_imports.py
test_repo/: my_file.py
(+143 files in other folders)
