[package]
name = "helix-engine"
version = "0.1.0"
edition = "2021"

# engine/helix-engine/Cargo.toml
[dependencies]
tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.23.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2"
sha2 = "0.10.8"


